Minor tweaks to combat & crafting. Fleshed out the might section of Classes/Jobs & updated skills a bit accordingly.

--- a/Combat.html
+++ b/Combat.html
@@ -43,12 +43,12 @@
   <li>Same -3 to +3 scale as H3C generally (GM Leadership opens up +4, GM Demoralize opens up -4), but two positive
       & 2 negative outcomes, rather than just 1 of each. Also, Master Leadership/Demoralization effects cancel out,
       but GM effects override Master.</li>
-  <li>Positive: Minor - extra movement hexes for the unit this turn. Rolls for & is triggered at unit turn start,
-      indicated in info box with some visual cue (e.g. [7]) to indicate the one-turn nature of the effect. Major -
-      Extra turn for the unit. Only diff between this & classic H3 is the indication of the roll at the start of
-      the unit's turn.</li>
-  <li>Negative: Minor - reduced movement hexes for the turn. Same indication/roll as Positive outcomes. Major - Fully
-      lost turn like H3C.</li>
+  <li>Positive: Minor - 50% extra movement hexes for the unit this turn or 50% bonus atk spd if extra movement unused.
+      Rolls for & is triggered at unit turn start, indicated in info box with some indication (e.g. [7]) that
+      distinguishes the one-turn nature of the effect. Major - Extra full turn of movement/atk for the unit. Only diff
+      between this & classic H3 is the indication of the roll at the start of the unit's turn.</li>
+  <li>Negative: Minor - 50% reduced movement hexes of 50% reduced atk spd for the turn. Same indication/roll as
+      Positive outcomes. Major - Fully lost turn like H3C.</li>
 </ul>
 <h3>Luck</h3>
 <ul>
@@ -58,13 +58,15 @@
   <li>The Luck Factor that determines what outcome occurs is based on the attacking unit's luck minus the defending
       unit's luck. Possible ranges are from -8 to +8: 0 means every hit is an Average Hit. +1 opens up possibility of
       Critical. +3 opens up possibility of Slayer. +5 guarantees Critical, +7 guarantees Slayer, +8 increases Slayer
-      mod. The reverse is symmetrically true.</li>
+      mod by 100%. The reverse is symmetrically true.</li>
 </ul>
 <h3>Ranged Units</h3>
 <ul>
   <li>Ranged attacks should suffer a distance penalty (e.g. -25% dmg for firing >10 hexes away), and additionally
       shooting over castle walls should downgrade a hit one category (e.g. an Average Hit should become a Weak Hit)
-      unless skills prevent it.</li>
+      unless skills prevent it. (TBS) Ranged attacks should suffer a distance penalty & also have a max distance
+      travelled before completely petering out & the missile disappearing, even spells. I think -50% here for long
+      range is ok since there aren't really castle walls to fire over (RPG).</li>
 </ul>
 </body>
 </html>
