--- a/Crafting.html
+++ b/Crafting.html
@@ -27,10 +27,9 @@
    repair any significant damage in armor: specifically, the leather(s)/metal(s) the armor is made of. Leather core
    pieces will be equippable underneath chain/plate core pieces for added protection & recovery penalty.</p>
 <p>Each piece of armor will be able to have 0-3 enchantments based on the repair status & the material quality of
-   the base armor, and each enchantment will fall into 1 of 3 categories: damage reduction, regeneration & speed.
+   the base armor, and each enchantment will fall into 1 of 3 categories: damage reduction, regeneration & special.
    Damage reduction enchantments will bolster the AC or magic resistance of the wearer, regeneration will boost
-   the hp or sp regen of the wearer, and speed will provide a recovery time reduction (or, more rarely, penalty) to
-   the wearer.</p>
+   the hp or sp regen of the wearer, and special covers anything else.</p>
 <h3>Weapons</h3>
 <p>Weapons, like armor, will generally not be forged wholesale from ores but rather obtained in made fashion & then
    repaired & enchanted by the player. Like armor, each weapon will be able to carry 0-3 enchantments based on the
