--- a/Races.html
+++ b/Races.html
@@ -11,8 +11,8 @@
    language, consciously & critically.</p>
 <h2>Races</h2>
 <h3>Humanoid</h3>
-<p>Vampiers & Liches are considered sentient humanoids, but not a race of their own. They are modifications on other
-   races. This should be reflected in character creation.</p>
+<p>Skeletons, Zombies, Vampires & Liches are considered sentient humanoids, but not a race of their own. They are
+   modifications on other races. This should be reflected in character creation.</p>
 <ul>
   <li>Human</li>
   <li>Angel</li>
@@ -107,10 +107,34 @@
 <h3>All-Might:</h3>
 <ul>
   <li>Fighter (Basic)</li>
+  <li>RPG Reqs: 25 Mgt/End, 20 Spd/Acc</li>
+  <li>TBS Reqs: 2 Battle skills, 1 Battle/Other</li>
   <li>Knight - Champion or Paladin</li>
+  <li>RPG Reqs: Knight - 50 Mgt/End, 40 Spd/Acc, Exp in a melee weapon, Adv in Chain or Plate, Bas Smithing;
+      Champion - 100 Mgt/End, 75 Spd/Acc, Mas in melee weap, Exp in Chain or Plate, Exp Smithing; Paladin - 80
+      Mgt/End, 70 Spd/Acc, 40 Per, Mas in melee weap, Exp in Chain or Plate, Adv Smithing, Bas all 3 self magics</li>
+  <li>TBS Reqs: Knight - 2Atk/2Def, Bas Leadership; Champion - 8Atk/8Def, Exp Leadership + 2 Adv+ Battle
+      skills; Paladin - 6Atk/7Def/1Pwr/2Kno, Exp leadership, 1 Adv+ Battle skill, Bas all 3 self magics</li>
   <li>Barbarian - Tribal Chieftan or Warlord</li>
+  <li>RPG Reqs: Barbarian - 50 Mgt/Spd, 40 End/Acc, Exp in a melee weapon, Adv any armor skill, Bas Body Building;
+      Warlord - 100 Mgt/Spd, 75 End/Acc, Mas melee weapon, Exp any armor, Exp Body Building or Adv Body Building/Adv
+      Regeneration; Tribal Chieftan - 80 Mgt/Spd, 70 End/Acc, 40Per, Exp melee weap, Adv armor, Adv Body Building
+      or Regen, Adv Spirit & Body Magics</li>
+  <li>TBS Reqs: Barbarian - 3Atk/1Def, Bas Offense; Warlord - 10Atk/6Def, Exp Offense + 2 Adv+ Battle skills;
+      Tribal Chieftan - 6Atk/6Def/2Pwr/2Kno, Adv Offense + 1 more Adv Battle or Other skill, Adv Spirit & Body
+      Magics</li>
   <li>Rogue - Spy or Assassin</li>
+  <li>RPG Reqs: Rogue - 40 Mgt/End/Spd/Acc/Lck, Adv Dagger/Disarm Trap/Leather; Spy - 80 Lck, 70
+      Mgt/End/Spd/Acc, 40 Int, Mas Dagger, Exp Disarm Trap/Leather, Adv Air Magic; Assassin - 80 Spd/Acc/Lck, 70
+      Mgt/End, Mas Dagger, Exp Disarm Trap/Leather, Adv Dodging</li>
+  <li>TBS Reqs: Rogue - 2Atk/1Def (4tot atk/def), 1 Battle skill, 1 Other skill; Spy - 8Atk/5Def/1Pwr/2Kno, 3 Adv
+      skills: at least
+      1 Battle & at least 1 Other; Assassin - 9Atk/7Def, 3 Adv skills: 2 Battle, 1 Other</li>
   <li>Beastkeeper - Land Defender</li>
+  <li>RPG Reqs: Beastkeeper - 50 End/Acc, 40 Mgt/Spd, Exp any armor skill, Adv any melee weapon or Bow, Bas ID
+      Monster; Land Defender - 100 End/Acc, 75 Mgt/Spd, Mas any armor, Exp any melee weapon or Bow, Exp ID Monster</li>
+  <li>TBS Reqs: Beastkeeper - 1Atk/3Def, Bas Armorer + 1 Battle skill + 1 Battle/Other skill; Land Defender -
+      6Atk/10Def, Exp Armorer, 1 Adv+ Battle skill, 1 Adv+ Battle or Other skill</li>
 </ul>
 <h3>Might-Focused</h3>
 <ul>
