Tweaked the stats & skills in the All-Might classes to be consistent (I think), laid out the framework for all the other classes, added some general notes & wrote out specs for half the Might-Focused classes.

--- a/Races.html
+++ b/Races.html
@@ -104,69 +104,132 @@
    accomplishing a quest. Choosing 1 path locks out all others for actual promotion, but quest xp can be gained &
    "honorary" titles as well like MMC. In TBS, all heroes start at first specialties & can progress to 2nd via
    experience.</p>
+<p>TBS mechanic thoughts: Rather than having an infinite stream of heroes available to recruit, towns/factions should
+   be able to promote a set # of available lieutenants-in-waiting (or whatever the lore justification is) per week to
+   heroes that can move around the map & lead an army. These values (town limit/faction limit) should be adjustable
+   on a per-map/per-campaign basis & set to 1 per week for both at default. Another mechanic should be for a
+   map/campaign to have a preloaded set of heroes per faction ready to deploy but after those are exhausted, fall
+   back on the limit. Think of the H3C campaigns where all the tavern heroes are lvl 3, 5, 7, etc. to start.
+   Additionally, towns should only be able to train heroes that are affiliated with their town by default, or, more
+   rarely & lore-dependent, train allied heroes, e.g. the H3C RoE map where you have Castle, Rampart & Tower allied
+   against Dungeon, the former should be able to train any of the 3 at any castle.</p>
 <h3>All-Might:</h3>
 <ul>
   <li>Fighter (Basic)</li>
   <li>RPG Reqs: 25 Mgt/End, 20 Spd/Acc</li>
   <li>TBS Reqs: 2 Battle skills, 1 Battle/Other</li>
+  <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
+  <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Knight - Champion or Paladin</li>
   <li>RPG Reqs: Knight - 50 Mgt/End, 40 Spd/Acc, Exp in a melee weapon, Adv in Chain or Plate, Bas Smithing;
-      Champion - 100 Mgt/End, 75 Spd/Acc, Mas in melee weap, Exp in Chain or Plate, Exp Smithing; Paladin - 80
-      Mgt/End, 70 Spd/Acc, 40 Per, Mas in melee weap, Exp in Chain or Plate, Adv Smithing, Bas all 3 self magics</li>
-  <li>TBS Reqs: Knight - 2Atk/2Def, Bas Leadership; Champion - 8Atk/8Def, Exp Leadership + 2 Adv+ Battle
-      skills; Paladin - 6Atk/7Def/1Pwr/2Kno, Exp leadership, 1 Adv+ Battle skill, Bas all 3 self magics</li>
+      Champion - 100 Mgt/End, 65 Spd/Acc, Mas in melee weap, Exp in Chain or Plate, Exp Smithing; Paladin - 80
+      Mgt/End, 75 Spd/Acc, 40 Per, Mas in melee weap, Exp in Chain or Plate, Adv Smithing, Bas all 3 self magics</li>
+  <li>TBS Reqs: Knight - 2Atk/2Def, Bas Leadership + 1 Battle skill; Champion - 8Atk/8Def, Exp Leadership + 2 Adv+
+      Battle skills; Paladin - 6Atk/7Def/1Pwr/2Kno, Exp leadership, 1 Adv+ Battle skill, Bas all 3 self magics</li>
   <li>Barbarian - Tribal Chieftan or Warlord</li>
   <li>RPG Reqs: Barbarian - 50 Mgt/Spd, 40 End/Acc, Exp in a melee weapon, Adv any armor skill, Bas Body Building;
-      Warlord - 100 Mgt/Spd, 75 End/Acc, Mas melee weapon, Exp any armor, Exp Body Building or Adv Body Building/Adv
-      Regeneration; Tribal Chieftan - 80 Mgt/Spd, 70 End/Acc, 40Per, Exp melee weap, Adv armor, Adv Body Building
+      Warlord - 100 Mgt/Spd, 65 End/Acc, Mas melee weapon, Exp any armor, Exp Body Building or Adv Body Building/Adv
+      Regeneration; Tribal Chieftan - 80 Mgt/Spd, 70 End/Acc, 50 Per, Exp melee weap, Adv armor, Adv Body Building
       or Regen, Adv Spirit & Body Magics</li>
   <li>TBS Reqs: Barbarian - 3Atk/1Def, Bas Offense; Warlord - 10Atk/6Def, Exp Offense + 2 Adv+ Battle skills;
       Tribal Chieftan - 6Atk/6Def/2Pwr/2Kno, Adv Offense + 1 more Adv Battle or Other skill, Adv Spirit & Body
       Magics</li>
   <li>Rogue - Spy or Assassin</li>
-  <li>RPG Reqs: Rogue - 40 Mgt/End/Spd/Acc/Lck, Adv Dagger/Disarm Trap/Leather; Spy - 80 Lck, 70
-      Mgt/End/Spd/Acc, 40 Int, Mas Dagger, Exp Disarm Trap/Leather, Adv Air Magic; Assassin - 80 Spd/Acc/Lck, 70
-      Mgt/End, Mas Dagger, Exp Disarm Trap/Leather, Adv Dodging</li>
+  <li>RPG Reqs: Rogue - 40 Mgt/End/Spd/Acc/Lck, Adv Dagger/Disarm Trap/Leather; Spy - 70 Lck/Spd/Acc, 60 Mgt/End, 40
+      Int, Mas Dagger, Exp Disarm Trap/Leather, Adv Air Magic; Assassin - 80 Spd/Acc, 70
+      Mgt/Lck, 50 END, Mas Dagger, Exp Disarm Trap/Leather, Adv Dodging</li>
   <li>TBS Reqs: Rogue - 2Atk/1Def (4tot atk/def), 1 Battle skill, 1 Other skill; Spy - 8Atk/5Def/1Pwr/2Kno, 3 Adv
       skills: at least
       1 Battle & at least 1 Other; Assassin - 9Atk/7Def, 3 Adv skills: 2 Battle, 1 Other</li>
   <li>Beastkeeper - Land Defender</li>
   <li>RPG Reqs: Beastkeeper - 50 End/Acc, 40 Mgt/Spd, Exp any armor skill, Adv any melee weapon or Bow, Bas ID
-      Monster; Land Defender - 100 End/Acc, 75 Mgt/Spd, Mas any armor, Exp any melee weapon or Bow, Exp ID Monster</li>
+      Monster; Land Defender - 90 End/Acc, 75 Mgt/Spd, Mas any armor, Exp any melee weapon or Bow, Exp ID Monster</li>
   <li>TBS Reqs: Beastkeeper - 1Atk/3Def, Bas Armorer + 1 Battle skill + 1 Battle/Other skill; Land Defender -
       6Atk/10Def, Exp Armorer, 1 Adv+ Battle skill, 1 Adv+ Battle or Other skill</li>
 </ul>
 <h3>Might-Focused</h3>
 <ul>
   <li>Ranger (Basic)</li>
+  <li>RPG Reqs: 25 Mgt OR End, 20 Spd/Acc</li>
+  <li>TBS Reqs: </li>
+  <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
+  <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Hunter - Sniper</li>
+  <li>RPG Reqs: Hunter - 50 Spd/Acc, 40 Mgt/End, Exp Bow, Adv Leather/Chain, Bas Perception; Sniper - 100 Spd/Acc, 65
+      Mgt/End, Mas Bow, Exp Leather/Chain, Adv Perception, Adv Dagger or Spear</li>
+  <li>TBS Reqs: Hunter - 2Atk/1Def/1Pow/1Kno, Bas Archery; Sniper - 8Atk/5Def/1Pow/1Kno, Exp Archery, Adv 1 Battle
+      Skill, Adv 1 Magic/Other skill</li>
   <li>Dungeonkeeper - Overlord</li>
+  <li>RPG Reqs: Dungeonkeeper - 40Mgt/End/Spd/Acc/Int, Adv 1 melee weapon, Adv any armor, Adv 1 magic; Overlord -
+      80 Mgt/End, 70 Spd/Acc, 50 Int, Exp 1 melee weapon, Exp any armor, Exp 1 magic, Adv 1 other magic</li>
+  <li>TBS Reqs: Dungeonkeeper - 2Atk/1Def/1Pow/1Kno, Bas Offense OR Armorer, Bas any magic; Overlord -
+      7Atk/5Def/2Pow/2Kno, Exp Offense OR Exp Armorer, Adv 2 magics</li>
   <li>Demon General - Demon Lord</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Mechanic - Engineer</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
 </ul>
 <h3>Balanced</h3>
 <ul>
   <li>Initiate (Basic)</li>
+  <li>RPG Reqs: 20 in all but luck</li>
+  <li>TBS Reqs: </li>
+  <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
+  <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Monk - Zealot or Ninja</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Warrior Mage - Battle Mage</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Death Knight - Dread Knight</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Herbalist - Alchemist</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
 </ul>
 <h3>Magic-Focused</h3>
 <ul>
   <li>Acolyte (Basic)</li>
+  <li>RPG Reqs: 25 Int OR Per, 20 Spd/Acc</li>
+  <li>TBS Reqs: </li>
+  <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
+  <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Summoner - Heretic</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Cleric - Priest of Life</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Shaman - Witch</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Elementalist - Planeswalker</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
 </ul>
 <h3>All-Magic</h3>
 <ul>
   <li>Mage (Basic)</li>
+  <li>RPG Reqs: 25 Int/Per, 20 Spd/Acc</li>
+  <li>TBS Reqs: </li>
+  <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
+  <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Sorcerer - Warlock</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Wizard - Archmage</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Necromancer - Grand Necromancer or High Lich</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
   <li>Druid - Grand Druid</li>
+  <li>RPG Reqs: </li>
+  <li>TBS Reqs: </li>
 </ul>
 </body>
 </html>
