Typo correction in Skills. Fleshed out Areas a bit more. Put in some reqs for classes. Thinking some changes will be needed to skills again.

--- a/Areas.html
+++ b/Areas.html
@@ -8,10 +8,28 @@
 <h1>Areas, Maps, Terrain & Weather</h1>
 <p>Places mentioned in H2C: </p>
 <h2>Areas & Maps</h2>
+<p>Add bridges as traversable terrain in TBS instead of relying on little sandbars.</p>
 <h3>Enroth</h3>
 <p>Almost as large as Antagaritch, but slightly smaller & less diverse. Fully north of the equator, but
    Dragonsands/Mire of the Damned (most will need name changes) close to equator. Rather than having 15 square maps
    of equalish size, each section will have its own outdoor map of varying size based on the area.</p>
+<h4>New Sorpigal</h4>
+<h4>Misty Isles</h4>
+<h4>Eel-Infested Waters</h4>
+<h4>Castle Ironfist</h4>
+<h4>Bootleg Bay</h4>
+<h4>Silver Cove</h4>
+<h4>Mire of the Damned</h4>
+<h4>Free Haven</h4>
+<h4>Frozen Highlands</h4>
+<h4>Dragonsands</h4>
+<h4>Blackshire</h4>
+<h4>Kriegspire</h4>
+<h4>Hermit's Isle</h4>
+<h4>Paradise Valley</h4>
+<h4>Sweet Water</h4>
+<h4>Wizard Isles (?)</h4>
+
 <h3>Antagaritch</h3>
 <p>Very large, most diverse geographically, equator runs thru Eeofol, Tularea & the top of Deyja. Nighon close to
    mainland but large, separate island with its own geography (think Madagascar a bit). Evenmorn off the southwest
@@ -19,6 +37,23 @@
    (Harmondale) on the Avlee/Erathia border, but close-ish to Deyja as well, kinda kitty-cornered. Barrow Downs part
    of Krewlod, may need a rework (not dwarves in there or full of ghosts/gogs). Swap Tularea to be the northern section
    of Avlee (the place that's called Avlee in MM7C) & make Pierpont in Avlee proper.</p>
+<h4>Avlee/Tularea</h4>
+<p>The Shandahar River should be the southern border of most of Avlee, separating it from Deyja in the eastern
+   sections, and Erathia as you get west towards the coast.
+</p>
+<h4>Erathia</h4>
+<h4>Deyja</h4>
+<h4>Tatalia</h4>
+<h4>Harmondale/The Contested Lands</h4>
+<h4>Barrow Downs</h4>
+<h4>Krewlod</h4>
+<h4>Bracada</h4>
+<h4>Nighon</h4>
+<h4>Eeofol/Land of the Giants</h4>
+<h4>Emerald Isle</h4>
+<h4>Evenmorn Isles</h4>
+<h4></h4>
+
 <h3>Jadame</h3>
 <p>Smallest of the 3, includes Regna kind of because it's the closest, but Regna is in reality its own separate
    entity. Mostly northish of the equator, which should run right through Dagger Wound & above Regna.</p>
@@ -27,8 +62,10 @@
 <h4>Ironsand Desert</h4>
 <h4>Garrote Gorge</h4>
 <h4>Ravenshore</h4>
-<h4></h4>
-<h4></h4>
+<h4>Shadowspire</h4>
+<h4>Ravage Roaming</h4>
+<h4>Dagger Wound Islands</h4>
+<h4>Regna</h4>
 <h2>Terrain & Weather</h2>
 <h3>Terrain</h3>
 <p>Each area should have a base terrain or two from among the possibles that correlates with the character of the
@@ -41,7 +78,7 @@
   <li>Grassland - 0% move penalty</li>
   <li>Forest - 10% penalty</li>
   <li>Dirt - 0% penalty</li>
-  <li>Rough - </li>
+  <li>Rough - 25% penalty</li>
   <li>Savannah - 10% penalty</li>
   <li>Sand - 50% penalty</li>
   <li>Swamp - 50% penalty</li>
