--- a/Skills.html
+++ b/Skills.html
@@ -149,7 +149,7 @@
   <li>Generally, Grandmastery of skills should not be able to be learned from the castle, but from an outside
       scholar. Each castle should have 1-2 available, thematically appropriate, once a Metropolis is built.</li>
   <li>Level 1 Heroes should start with 3 skills thematically appropriate to their type, e.g. Death Knights should
-      have Death Magic along with 2 battle skills.</li>
+      have Death Magic along with a battle skill.</li>
 </ul>
 <h4>Battle</h4>
 <ul>
@@ -248,7 +248,7 @@
       Grandmaster - Stronger monsters will strongly consider joining you. Even-strength gt'd join or flee (flee
       overrides no-flee map settings). -90% surrender cost.</li>
   <li>Estates: Basic - +125 gold/day; Advanced - +250 gold/day; Expert - +500 gold/day; Master - +1000 gold/day;
-      Grandmaster - +200o gold/day & +1 of the castle's 7th lvl creature resource/day (e.g. Castle is +1 gem/day).
+      Grandmaster - +2000 gold/day & +1 of the castle's 7th lvl creature resource/day (e.g. Castle is +1 gem/day).
       Based on the hero who has the skill's faction.</li>
   <li>Learning: Basic - 10% exp bonus; Advanced - 20% exp bonus; Expert - 30% exp bonus; Master - 50% exp bonus;
       Grandmaster - 100% exp bonus.</li>
