--- a/Races.html
+++ b/Races.html
@@ -125,7 +125,7 @@
       Champion - 100 Mgt/End, 65 Spd/Acc, Mas in melee weap, Exp in Chain or Plate, Exp Smithing; Paladin - 80
       Mgt/End, 75 Spd/Acc, 40 Per, Mas in melee weap, Exp in Chain or Plate, Adv Smithing, Bas all 3 self magics</li>
   <li>TBS Reqs: Knight - 2Atk/2Def, Bas Leadership + 1 Battle skill; Champion - 8Atk/8Def, Exp Leadership + 2 Adv+
-      Battle skills; Paladin - 6Atk/7Def/1Pwr/2Kno, Exp leadership, 1 Adv+ Battle skill, Bas all 3 self magics</li>
+      Battle skills; Paladin - 6Atk/7Def/1Pwr/2Kno, Exp leadership, 1 Adv+ Battle skill, Bas 3/4 self/life magics</li>
   <li>Barbarian - Tribal Chieftan or Warlord</li>
   <li>RPG Reqs: Barbarian - 50 Mgt/Spd, 40 End/Acc, Exp in a melee weapon, Adv any armor skill, Bas Body Building;
       Warlord - 100 Mgt/Spd, 65 End/Acc, Mas melee weapon, Exp any armor, Exp Body Building or Adv Body Building/Adv
@@ -133,19 +133,18 @@
       or Regen, Adv Spirit & Body Magics</li>
   <li>TBS Reqs: Barbarian - 3Atk/1Def, Bas Offense; Warlord - 10Atk/6Def, Exp Offense + 2 Adv+ Battle skills;
       Tribal Chieftan - 6Atk/6Def/2Pwr/2Kno, Adv Offense + 1 more Adv Battle or Other skill, Adv Spirit & Body
-      Magics</li>
+      Magics; Warlord - Atk > Def.</li>
   <li>Rogue - Spy or Assassin</li>
   <li>RPG Reqs: Rogue - 40 Mgt/End/Spd/Acc/Lck, Adv Dagger/Disarm Trap/Leather; Spy - 70 Lck/Spd/Acc, 60 Mgt/End, 40
       Int, Mas Dagger, Exp Disarm Trap/Leather, Adv Air Magic; Assassin - 80 Spd/Acc, 70
       Mgt/Lck, 50 END, Mas Dagger, Exp Disarm Trap/Leather, Adv Dodging</li>
   <li>TBS Reqs: Rogue - 2Atk/1Def (4tot atk/def), 1 Battle skill, 1 Other skill; Spy - 8Atk/5Def/1Pwr/2Kno, 3 Adv
-      skills: at least
-      1 Battle & at least 1 Other; Assassin - 9Atk/7Def, 3 Adv skills: 2 Battle, 1 Other</li>
+      skills: at least 1 Battle & at least 1 Other; Assassin - 9Atk/7Def, 3 Adv skills: 2 Battle, 1 Other</li>
   <li>Beastkeeper - Land Defender</li>
   <li>RPG Reqs: Beastkeeper - 50 End/Acc, 40 Mgt/Spd, Exp any armor skill, Adv any melee weapon or Bow, Bas ID
       Monster; Land Defender - 90 End/Acc, 75 Mgt/Spd, Mas any armor, Exp any melee weapon or Bow, Exp ID Monster</li>
   <li>TBS Reqs: Beastkeeper - 1Atk/3Def, Bas Armorer + 1 Battle skill + 1 Battle/Other skill; Land Defender -
-      6Atk/10Def, Exp Armorer, 1 Adv+ Battle skill, 1 Adv+ Battle or Other skill</li>
+      6Atk/10Def, Exp Armorer, 1 Adv+ Battle skill, 1 Adv+ Battle or Other skill; Both - Def > Atk.</li>
 </ul>
 <h3>Might-Focused</h3>
 <ul>
@@ -158,32 +157,42 @@
   <li>RPG Reqs: Hunter - 50 Spd/Acc, 40 Mgt/End, Exp Bow, Adv Leather/Chain, Bas Perception; Sniper - 100 Spd/Acc, 65
       Mgt/End, Mas Bow, Exp Leather/Chain, Adv Perception, Adv Dagger or Spear</li>
   <li>TBS Reqs: Hunter - 2Atk/1Def/1Pow/1Kno, Bas Archery; Sniper - 8Atk/5Def/1Pow/1Kno, Exp Archery, Adv 1 Battle
-      Skill, Adv 1 Magic/Other skill</li>
+      Skill, Adv 1 Magic/Other skill; Both - Atk > Def.</li>
   <li>Dungeonkeeper - Overlord</li>
   <li>RPG Reqs: Dungeonkeeper - 40Mgt/End/Spd/Acc/Int, Adv 1 melee weapon, Adv any armor, Adv 1 magic; Overlord -
       80 Mgt/End, 70 Spd/Acc, 50 Int, Exp 1 melee weapon, Exp any armor, Exp 1 magic, Adv 1 other magic</li>
   <li>TBS Reqs: Dungeonkeeper - 2Atk/1Def/1Pow/1Kno, Bas Offense OR Armorer, Bas any magic; Overlord -
-      7Atk/5Def/2Pow/2Kno, Exp Offense OR Exp Armorer, Adv 2 magics</li>
+      7Atk/5Def/2Pow/2Kno, Exp Offense OR Exp Armorer, Adv 2 magics; Both - Pow > Kno.</li>
   <li>Demon General - Demon Lord</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Demon General - 50 Mgt/Spd, 40 Acc/Int, Adv 1 melee weap, Adv chain/plate, Adv 1 magic; Demon Lord
+      - 90 Mgt/Spd, 75 Acc/Int, Exp 1 melee weap, Exp any armor, Exp 1 magic, Adv Regeneration.</li>
+  <li>TBS Reqs: Demon General - 2Atk/1Pow/1Kno, Bas Intimidation; Demon Lord - 8Atk/4Def/3Pow/1Kno, Exp
+      Intimidation, Adv 1 magic & Adv 1 other battle skill; Both - Atk > Def, Pow > Kno.</li>
   <li>Mechanic - Engineer</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Mechanic - 40End/Spd/Acc/Int/Lck, Adv Learning, Adv any armor, Adv any magic/alchemy; Engineer -
+      70End/Spd/Acc/Int/Lck, Exp Learning, Exp any armor, Adv any 3 magics/alchemy</li>
+  <li>TBS Reqs: Mechanic - 2Def/1Pow/1Kno, Bas Learning; Engineer - 5Atk/7Def/1Pow/3Kno, Exp Learning, Adv 1 Battle
+      skill, Adv 1 Magic, +1 Other skill; Both - Def >= Atk, Kno >= Pow.</li>
 </ul>
 <h3>Balanced</h3>
 <ul>
   <li>Initiate (Basic)</li>
   <li>RPG Reqs: 20 in all but luck</li>
-  <li>TBS Reqs: </li>
   <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
   <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Monk - Zealot or Ninja</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Monk - 50 End/Per, 40 Mgt/Spd, Adv Unarmed/Dodging, Adv Body Magic; Zealot - 80 Per, 70
+      Mgt/End/Spd, 40 Int/Acc, Exp Unarmed/Dodging, Adv Body/Mind/Spirit/Life; Ninja - 80 End/Per, 70 Mgt/Spd, 50
+      Acc, Mas Unarmed/Dodging, Adv Disarm Trap, Bas Leather, Bas Staff OR Dagger</li>
+  <li>TBS Reqs: Monk - 1Atk/1Def/1Pow/1Kno, Bas Body Magic; Zealot - 4Atk/5Def/3Pow/4Kno, Adv Body, Bas all
+      self+life magics, Adv 1 Battle skill; Ninja - 6Atk/6Def/2Pow/2Kno, Exp Offense/Armorer, Adv the other, Adv 1
+      Other skill.</li>
   <li>Warrior Mage - Battle Mage</li>
-  <li>RPG Reqs: </li>
-  <li>TBS Reqs: </li>
+  <li>RPG Reqs: Warrior Mage - 50 Mgt/Int, 40 Spd/Acc, Adv 1 Elemental Magic, Adv 1 other magic, Adv 1 non-blaster
+      weapon; Battle Mage - 80 Mgt/Int, 70 Spd/Acc, 50 Per, Exp 1 Elemental Magic, Exp 1 other magic, Exp 1
+      non-blaster weapon, Adv any armor.</li>
+  <li>TBS Reqs: Warrior Mage - 2Atk/2Pow/1Kno, Bas Any Magic; Battle Mage - 5Atk/3Def/5Pow/3Kno, Exp any magic, Adv
+      any other magic, Exp 1 Battle skill</li>
   <li>Death Knight - Dread Knight</li>
   <li>RPG Reqs: </li>
   <li>TBS Reqs: </li>
@@ -195,7 +204,6 @@
 <ul>
   <li>Acolyte (Basic)</li>
   <li>RPG Reqs: 25 Int OR Per, 20 Spd/Acc</li>
-  <li>TBS Reqs: </li>
   <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
   <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Summoner - Heretic</li>
@@ -215,7 +223,6 @@
 <ul>
   <li>Mage (Basic)</li>
   <li>RPG Reqs: 25 Int/Per, 20 Spd/Acc</li>
-  <li>TBS Reqs: </li>
   <!-- RPG - First promo: stats 100 total above avg, 3 masteries above Bas; Second: 250 stats, 7 masteries -->
   <!-- TBS - First promo (where heroes start): 4-5 stat req, 1-2 skill req; Second: 16 stat, 7-8 skill -->
   <li>Sorcerer - Warlock</li>
